--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ npm-debug.log
 
 # Application
 
-Knab\ transactieoverzicht\ betaalrekening* knab.in.csv
-knab.in.csv
-ynab.out.csv
+Knab\ transactieoverzicht\ betaalrekening*
+knab.csv
+ynab.csv
+temp
